tried to implement the specific drinks per branch code