@@ -1,7 +1,10 @@
 package com.ics.spring_drinks.services.impl;
 
 import com.ics.dtos.DrinkDto;
+import com.ics.models.Branch;
+import com.ics.models.BranchStock;
 import com.ics.models.Drink;
+import com.ics.spring_drinks.repository.BranchStockRepository;
 import com.ics.spring_drinks.repository.DrinkRepository;
 import com.ics.spring_drinks.services.DrinkService;
 import jakarta.transaction.Transactional;
@@ -9,25 +12,29 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class DrinkServiceImpl implements DrinkService {
 
     private final DrinkRepository drinkRepository;
+    private final BranchStockRepository branchStockRepository;
 
     @Override
-    public List<DrinkDto> getAllDrinks() {
-        return drinkRepository.findAll().stream()
+    public List<DrinkDto> getAllDrinks(Branch branch) {
+        return branchStockRepository.findByBranch(branch).stream()
                 .map(this::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public DrinkDto getDrinkById(long id) {
+    public DrinkDto getDrinkById(long id, Branch branch) {
         Drink drink = drinkRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Drink not found with id: " + id));
-        return mapToDto(drink);
+        BranchStock branchStock = branchStockRepository.findByBranchAndDrink(branch, drink)
+                .orElseThrow(() -> new RuntimeException("Drink not available at this branch"));
+        return mapToDto(branchStock);
     }
 
     @Override
@@ -35,29 +42,41 @@ public class DrinkServiceImpl implements DrinkService {
         Drink drink = new Drink();
         drink.setDrinkName(drinkDto.getDrinkName());
         drink.setDrinkPrice(drinkDto.getDrinkPrice());
-        drink.setDrinkQuantity(drinkDto.getDrinkQuantity());
+        Drink savedDrink = drinkRepository.save(drink);
 
-        Drink saved = drinkRepository.save(drink);
-        return mapToDto(saved);
+        // Initialize stock for all branches
+        for (Branch branch : Branch.values()) {
+            BranchStock branchStock = new BranchStock();
+            branchStock.setBranch(branch);
+            branchStock.setDrink(savedDrink);
+            branchStock.setQuantity(drinkDto.getDrinkQuantity()); // Initial quantity
+            branchStockRepository.save(branchStock);
+        }
+
+        BranchStock initialStock = branchStockRepository.findByBranchAndDrink(Branch.NAIROBI, savedDrink).get();
+        return mapToDto(initialStock);
     }
 
     @Override
     @Transactional
-    public DrinkDto updateDrink(long id, DrinkDto drinkDto) {
+    public DrinkDto updateDrink(long id, DrinkDto drinkDto, Branch branch) {
         Drink drink = drinkRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Drink not found with id: " + id));
 
-        // Update only fields you allow
+        BranchStock branchStock = branchStockRepository.findByBranchAndDrink(branch, drink)
+                .orElseThrow(() -> new RuntimeException("Drink not available at this branch"));
+
         if (drinkDto.getDrinkPrice() > 0) {
             drink.setDrinkPrice(drinkDto.getDrinkPrice());
+            drinkRepository.save(drink);
         }
 
-        if (drinkDto.getDrinkQuantity() > 0) {
-            drink.setDrinkQuantity(drinkDto.getDrinkQuantity());
+        if (drinkDto.getDrinkQuantity() >= 0) {
+            branchStock.setQuantity(drinkDto.getDrinkQuantity());
         }
 
-        Drink updated = drinkRepository.save(drink);
-        return mapToDto(updated);
+        BranchStock updatedStock = branchStockRepository.save(branchStock);
+        return mapToDto(updatedStock);
     }
 
     @Override
@@ -67,13 +86,50 @@ public class DrinkServiceImpl implements DrinkService {
         drinkRepository.delete(drink);
     }
 
-    // 🔁 Mapper method
-    private DrinkDto mapToDto(Drink drink) {
+    @Override
+    @Transactional
+    public void restockDrink(long drinkId, Branch branch, int quantity) {
+        Drink drink = drinkRepository.findById(drinkId)
+                .orElseThrow(() -> new RuntimeException("Drink not found with id: " + drinkId));
+        BranchStock branchStock = branchStockRepository.findByBranchAndDrink(branch, drink)
+                .orElseThrow(() -> new RuntimeException("Drink not available at this branch"));
+
+        branchStock.setQuantity(branchStock.getQuantity() + quantity);
+        branchStockRepository.save(branchStock);
+    }
+
+    /**
+     * NEW: Implementation to fetch all low stock items from the repository
+     * and map them to DTOs that include branch information.
+     */
+    @Override
+    @Transactional
+    public List<DrinkDto> getLowStockItems() {
+        return branchStockRepository.findLowStockItems().stream()
+                .map(this::mapToDtoWithBranch)
+                .collect(Collectors.toList());
+    }
+
+    // Mapper for contexts where branch info in the DTO is not needed
+    private DrinkDto mapToDto(BranchStock branchStock) {
+        Drink drink = branchStock.getDrink();
         return new DrinkDto(
                 drink.getId(),
                 drink.getDrinkName(),
-                drink.getDrinkQuantity(),
-                drink.getDrinkPrice()
+                branchStock.getQuantity(),
+                drink.getDrinkPrice(),
+                null // Branch is null
+        );
+    }
+
+    private DrinkDto mapToDtoWithBranch(BranchStock branchStock) {
+        Drink drink = branchStock.getDrink();
+        return new DrinkDto(
+                drink.getId(),
+                drink.getDrinkName(),
+                branchStock.getQuantity(),
+                drink.getDrinkPrice(),
+                branchStock.getBranch() // Set the branch here
         );
     }
 }
